--- a/src/components/nav-bar/nav-bar.css
+++ b/src/components/nav-bar/nav-bar.css
@@ -85,10 +85,11 @@ a {
   
   .dropdown-content {
     top: 40px;
+    left: -15px;
     display: none;
     position: absolute;
     background-color: #fff;
-    min-width: 114px;
+    min-width: 130px;
     min-height: auto;
     overflow: auto;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
