--- a/src/components/minicart-component/minicart-component.css
+++ b/src/components/minicart-component/minicart-component.css
@@ -42,11 +42,12 @@
 }
 
 .minicart-list-item {
+  height: 230px;
+  max-height: 250px;
   padding: 5px;
   display: flex;
   border: solid 1px lightgray;
   font-size: 1.5em;
-  height: 140px;
   background-color: white;
   justify-content: space-between;
 }
@@ -57,8 +58,15 @@
   width: 45%;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   position: relative;
+}
+
+.minicart-item-details > * {
+  padding-bottom: 20px;
+}
+
+.minicart-item-details > div {
+  padding-bottom: 0px;
 }
 
 .minicart-item-details > p {
@@ -71,15 +79,25 @@
 
 .mini-price {
   margin: 0;
-  padding-bottom: 40px;
+  padding-bottom: 20px;
   font-weight: bolder;
 }
 
 .size-container {
-  width: 130px;
-  display: flex;
-  position: absolute;
   bottom: 0;
+  position: absolute;
+  width: auto;
+  display: flex;
+  flex-direction: column;
+}
+
+.divider {
+  display: flex;
+  
+}
+
+.divider > * {
+  margin-top: 20px;
 }
 
 
@@ -98,6 +116,18 @@
   border: solid 1px;
   text-align: center;
   padding: 1px 7px;
+}
+
+.size-color {
+  font-weight: 600;
+  margin-right: 5px;
+  border: solid 1px black;
+  text-align: center;
+  padding: 1px 7px;
+}
+
+.gray {
+  opacity: 0.4;
 }
 
 .minicart-items-total-amount {
