--- a/src/components/details-page/details-page.css
+++ b/src/components/details-page/details-page.css
@@ -3,11 +3,12 @@
   display: flex;
   justify-content: space-between;
   width: auto;
+  height: fit-content;
   margin: 160px 200px 135px 96px;
 }
 
 .item-details > * {
-  margin: 20px 0 20px 0;
+  margin: 30px 0;
 }
 
 .gallery-list {
@@ -44,18 +45,35 @@
   justify-content: center;
   width: 550px;
   height: 550px;
+  position: relative;
+}
+
+.gallery-cover {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(216, 215, 215, 0.315);
+}
+
+.gallery-cover > span {
+  font-weight: 600;
+  font-size: 3em;
+  color: #8d8f9a;
 }
 
 .item-details {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   width: auto;
-  height: 550px;
+  height: fit-content;
   margin-left: 30px;
 }
 
 .item-title-container {
+  margin-top: 0;
   font-size: 1.5em;
   height: 70px;
   display: flex;
@@ -77,8 +95,7 @@
   display: flex;
   flex-direction: column;
   height: auto;
-
-  justify-content: space-between;
+  margin-bottom: 0;
 }
 
 .item-size-container > * {
@@ -97,6 +114,7 @@
   display: flex;
   justify-content: space-between;
   margin: 0;
+  margin-top: 5px;
   flex-wrap: wrap;
 }
 
@@ -131,16 +149,17 @@
   padding: 10px 19.5px 10px 19.5px;
 }
 
-p {
-  margin: 0;
-}
-
 .item-price-container {
   height: 50px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   font-size: 1.4em;
+  font-weight: 600;
+}
+
+.item-price-container > p {
+  margin: 0;
   font-weight: 600;
 }
 
@@ -163,7 +182,7 @@ p {
   gap: 40px;
   padding: 0 5px 0 5px;
   max-width: 250px;
-  height: 110px;
+  height: auto;
   color: #1d1f22;
   font-size: 1.2em;
   font-weight: 600;
