--- a/src/components/cart-component/cart-component.css
+++ b/src/components/cart-component/cart-component.css
@@ -66,7 +66,12 @@
 .cart-size-container {
   width: 230px;
   display: flex;
+  flex-direction: column;
   padding: 20px 0 0 0;
+}
+
+.cart-size-container > * {
+  margin-top: 10px;
 }
 
 .cart-divider {
